tests/baselines/reference/parserGenericsInInterfaceDeclaration1.errors.txt
parserGenericsInInterfaceDeclaration1.ts(2,7): error TS2304: Cannot find name 'A'.


==== parserGenericsInInterfaceDeclaration1.ts (1 errors) ====
    interface I<T> {
       v: A<T>;
          ~
!!! error TS2304: Cannot find name 'A'.
       f1<T>(): T;
       f2?<T>(): T;
       <T>(): void;
       new <T>(): void;
    }